--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -23,11 +23,11 @@
                             <li>Go to <a href="https://www.coinbase.com/settings/api" target="_blank">https://www.coinbase.com/settings/api</a></li>
                             <li>Click "New API Key"</li>
                             <li>Give the API key a nickname (e.g., "Amazing Automation")</li>
-                            <li>Set <strong>Portfolio</strong> to "Default"</li>
+                            <li>Set Portfolio to <strong>"Default"</strong></li>
                             <li>Check the View (read-only) box and nothing else</li>
                             <li>Set an IP whitelist if desired (optional)</li>
                             <li>Click "Create API Key" and you'll see your API Key and API Secret</li>
-                            <li>Copy and paste both values below (you won't be able to see the API Secret again)</li>
+                            <li>Copy and paste both values below (and maybe save them in a secure place as you won't be able to see the API Secret again)</li>
                         </ol>
                         <p>These API keys allow us to retrieve a list of portfolios.</p>
                     </div>
